tests/integration_tests/snapshots/integration_tests__mock_tests__get_multiple_new_address_proofs_interop-validity-proof.snap
---
source: tests/integration_tests/mock_tests.rs
assertion_line: 1144
expression: validity_proof
---
{
  "value": {
    "compressedProof": {
      "a": [],
      "b": [],
      "c": []
    },
    "roots": [
      "3FrGzyXtjqjnukHDS2M5oyVj8tMVcHSahcHpWBGR5MHY"
    ],
    "rootIndices": [
      3
    ],
    "leafIndices": [
      0
    ],
    "leaves": [
      "12nCKqGG85jHxbTeA8i2Z7D4vnNUUrQ4r5e8dv2o16X"
    ],
    "merkleTrees": [
      "amt1Ayt45jfbdw5YSo7iz6WZxUmnZsQTYXy82hVwyC2"
    ]
  },
  "context": {
    "slot": 0
  }
}
